test/call/num.lox
123() // error: can only call functions and structures
